# shopee-reviews-sentiment-analysis

./: .gitignore  README-en.md  README.md
active_learning/: eda.ipynb  pseudo2labelstudio.py  select_low_conf.py
data/: train.csv  val.csv
data/automated/: v3.csv  v3_sentences.txt  v3_sentences_pseudo.csv  v3_sentences_pseudo_uncertainty.csv
labelling-setup-guide/: README.md
notebooks/: train.ipynb
preproc/: model.py  predict.py  run.py  split.py
preproc/VnCoreNLP_Wrapper/py_vncorenlp/: vncorenlp.py
preproc/convert-to-word-level/: .gitignore  README.md  setup.cfg
preproc/convert-to-word-level/splitwords/: __init__.py  core.py
preproc/convert-to-word-level/splitwords/algorithms/: __init__.py  split_phrase_to_words.py
preproc/convert-to-word-level/splitwords/dicts/: vi.txt
preproc/convert-to-word-level/tests/: tmp.py
src/: .gitignore  dataset.py  model.py  split.py  train.py
src/wandb/: latest-run
src/wandb/run-20221120_164727-1kycfp7y/: run-1kycfp7y.wandb
src/wandb/run-20221120_164727-1kycfp7y/files/: config.yaml  requirements.txt
src/wandb/run-20221120_171602-210p4xgz/: run-210p4xgz.wandb
src/wandb/run-20221120_171602-210p4xgz/files/: conda-environment.yaml  config.yaml
src/wandb/run-20221120_171951-1mbg11us/: run-1mbg11us.wandb
src/wandb/run-20221120_171951-1mbg11us/files/: config.yaml
src/wandb/run-20221120_173245-36sis0j1/: run-36sis0j1.wandb
src/wandb/run-20221120_173917-3iyftut7/: run-3iyftut7.wandb
src/wandb/run-20221120_174313-2tp3u58z/: run-2tp3u58z.wandb
src/wandb/run-20221120_174453-1uqfktkv/: run-1uqfktkv.wandb
(+6 files in other folders)
