[metadata]
name = split-words
author= ['Thuc-Nguyen Quang', 'Thang-Long Nguyen-Ho']
description = split-words package
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pytorch
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Dynamic Programming :: Artificial Intelligence :: Natural Language Processing
url = https://github.com/zigonk/convert-to-word-level


[flake8]
max-line-length = 100
ignore = E402